# hydropower_gis

./: .gitattributes  .gitignore  README.md  geonames_h.shp  hello.py  home.py  hydro.json  malawi_hydropower_proximity_schemes.html  malawi_hydropower_schemes.html  malawi_places_map.html  map.html  map.py  mlwplaces_point.json  proximity.py  pyproject.toml  requirements.txt  rg.geojson  sln.geojson
Rain Gauges/: raingauges.dbf  raingauges.prj  raingauges.shp  raingauges.shx
Stream_ Lake GeoNames/: geonames_h.shx
Water Resource Areas [Atkins 2012]/: default_polygon.sld  waterresourceareas.dbf  waterresourceareas.prj  waterresourceareas.shx
duckdb_extensions/: httpfs.duckdb_extension  spatial.duckdb_extension
pages/: map.py  places.py  proximity.py  proximity_map.py  road_network.py  roads.py
src/: frontend.py  map.py  proximity.py
src/utils/: convert_to_geojson.py
